# WrapITK-unstable

./: CMakeLists.txt  ConfigureWrapping.cmake  CreateCableSwigInputs.cmake  CreateGccXMLInputs.cmake  CreateGenericSwigInterface.cmake  CreateWrapperLibrary.cmake  TypedefMacros.cmake  WrapITKTypes.cmake  igenerator.py  igenerator.py.in  itkFlatStructuringElement.txx
ConfigurationInputs/: module.i.in  module.includes.in  module_ext.i.in  wrap_ITK.cxx.in
Documentation/Copyright/: CodeCopyright.txt  Copyright.txt
ExternalProjects/FFTW/Wrapping/: CMakeLists.txt
ExternalProjects/FFTW/Wrapping/Python/Tests/: CMakeLists.txt  FFTWImageFilter.py
ExternalProjects/FFTW/src/: itkFFTWComplexConjugateToRealImageFilter.h  itkFFTWRealToComplexConjugateImageFilter.h  itkFFTWRealToComplexConjugateImageFilter.txx
ExternalProjects/ItkVtkGlue/src/: itkImageToVTKImageFilter.h  itkVTKImageToImageFilter.h  itkVTKImageToImageFilter.txx
ExternalProjects/NumericTraits/: wrap_itkNumericTraits.cmake
ExternalProjects/PyBuffer/: itkPyBuffer.h  itkPyBuffer.txx
Java/: CMakeLists.txt
Java/Tests/: CMakeLists.txt
Languages/: CMakeLists.txt
Languages/Java/: CMakeLists.txt  itkbase.java.in  java.i  module_ext.i.in
Languages/Python/: CMakeLists.txt  itkTemplate.py  python.i
Languages/Python/PyUtils/: itkPyCommand.cxx  itkPyImageFilter.h  itkPyImageFilter.txx
Languages/Python/Tests/: CMakeLists.txt  OldStyleBinaryDilateImageFilter.py  module2module.py  template.py
Languages/Python/Tests/notYetUsable/: ImageRegistration3.py
Languages/Python/itkExtras/: __init__.py
Languages/Tcl/: CreateLanguageSupport.cmake  itkTclAppInit.cxx  itkutils.tcl
Languages/Tcl/Tests/: ImageRegistration3.tcl  ImageRegistration5.tcl
Modules/: CMakeLists.txt
Modules/Base/: CMakeLists.txt  itkStringStream.cxx  itkStringStream.h  wrap_ITKCommonBase.cmake  wrap_itkArray2D.cmake  wrap_itkBoundingBox.cmake  wrap_itkDefaultStaticMeshTraits.cmake  wrap_itkIndex.cmake  wrap_itkInterpolateImageFunction.cmake  wrap_itkMapContainer.cmake  wrap_itkMatrix.cmake  wrap_itkNumericTraits.cmake  wrap_itkPointSet.cmake  wrap_itkRGBAPixel.cmake  wrap_itkSize.cmake  wrap_itkVersor.cmake
Modules/BaseNumerics/: CMakeLists.txt  wrap_ITKCostFunctions.cmake  wrap_itkDenseFrequencyContainer.cmake
Modules/BaseSpatialObject/: CMakeLists.txt  wrap_itkArrowSpatialObject.cmake  wrap_itkCylinderSpatialObject.cmake  wrap_itkPolygonGroupOrientation.cmake
Modules/BaseTransforms/: CMakeLists.txt  wrap_ITKCenteredSimilarityTransforms.cmake  wrap_ITKSimilarityTransforms.cmake  wrap_itkBSplineDeformableTransform.cmake  wrap_itkCenteredVersorTransformInitializer.cmake
Modules/BinaryMorphology/: CMakeLists.txt
Modules/Calculators/: CMakeLists.txt
Modules/Compose/: CMakeLists.txt
Modules/DeformableTransforms/: CMakeLists.txt
Modules/Denoising/: CMakeLists.txt
Modules/DistanceMap/: CMakeLists.txt
Modules/EdgesAndContours/: CMakeLists.txt
Modules/FFT/: CMakeLists.txt
Modules/FFTW/: CMakeLists.txt
Modules/Filtering/: CMakeLists.txt
Modules/IO/: CMakeLists.txt  wrap_ITKIOBase.cmake  wrap_itkImageSeriesWriter.cmake  wrap_itkTransformFileReader.cmake  wrap_itkTransformFileWriter.cmake
Modules/IntensityFilters/: CMakeLists.txt
Modules/Interpolators/: CMakeLists.txt  wrap_itkBSplineInterpolationWeightFunction.cmake
Modules/Iterators/: CMakeLists.txt
Modules/LevelSet/: CMakeLists.txt  wrap_itkParallelSparseFieldLevelSetImageFilter.cmake  wrap_itkSparseFieldFourthOrderLevelSetImageFilter.cmake  wrap_itkSparseFieldLevelSetImageFilter.cmake
Modules/Morphology/: CMakeLists.txt
Modules/Numerics/: CMakeLists.txt  wrap_itkHistogram.cmake
Modules/Patented/: CMakeLists.txt
Modules/PixelMath/: CMakeLists.txt
Modules/Registration/: CMakeLists.txt
Modules/Resize/: CMakeLists.txt
Modules/SegmentationAndThreshold/: CMakeLists.txt
Modules/SegmentationValidation/: CMakeLists.txt
Modules/SimpleFilters/: CMakeLists.txt  wrap_itkImageRegionSplitter.cmake  wrap_itkVectorCastImageFilter.cmake
Modules/SpatialObject/: CMakeLists.txt  wrap_itkAffineGeometryFrame.cmake  wrap_itkContourSpatialObjectPoint.cmake  wrap_itkSpatialObjectPoint.cmake
Modules/Transforms/: CMakeLists.txt  wrap_ITKRigidPerspectiveTransform.cmake  wrap_ITKScaleSkewVersorTransforms.cmake  wrap_itkTransform.cmake
Modules/UnaryPixelMath/: CMakeLists.txt
Modules/VXLNumerics/: CMakeLists.txt  wrap_vcl_complex.cmake  wrap_vnl_cost_function.cmake  wrap_vnl_least_squares_function.cmake  wrap_vnl_matrix_fixed_ref.cmake  wrap_vnl_unary_function.cmake
Python/: CMakeLists.txt  CreateLanguageSupport.cmake  itkTemplate.py
Python/PyUtils/: itkPyCommand.h
Python/Tests/: AntiAliasBinaryImageFilter.py  BoxGrayscaleDilateImageFilter.py  CMakeLists.txt  CannyEdgeDetectionImageFilter.py  FastMarchingImageFilter.py  FlatStructuringElement.py  GeodesicActiveContourImageFilter.py  MeanImageFilter.py  MedianImageFilter.py  ResampleImageFilter.py  SpatialObject.py  StrelFromImageGrayscaleDilateImageFilter.py  ThresholdSegmentationLevelSetImageFilter.py  WatershedSegmentation1.py  returnedTypeCoverage.py
Python/Tests/notYetUsable/: ImageRegistration4.py
Python/itkExtras/: __init__.py
Tcl/: CMakeLists.txt  itkTclCommand.cxx  itkTclCommand.h  itkTkImageViewer2D.cxx  itkTkImageViewer2D.h  itkdata.tcl  itkinteraction.tcl  itktesting.tcl  itkwish.in
Tcl/Tests/: CMakeLists.txt  ImageRegistration4.tcl
article/: Article.tex
patch/optional/: python-interface-patches.patch
pygccxml-0.8.2/: MANIFEST  PKG-INFO
pygccxml-0.8.2/docs/apidocs/: class-tree.html  epydoc.css  epydoc.js  exceptions.OSError-class.html  frames.html  help.html  identifier-index.html  index.html  module-tree.html  os-module.html  pygccxml-module.html  pygccxml.declarations-module.html  pygccxml.declarations.algorithm-module.html  pygccxml.declarations.algorithm.match_declaration_t-class.html  pygccxml.declarations.algorithm.visit_function_has_not_been_found_t-class.html  pygccxml.declarations.algorithms_cache-module.html  pygccxml.declarations.algorithms_cache.declaration_algs_cache_t-class.html  (+205 more)
(+8 files in other folders)
