
###############################################################################
# the macros in charge of dispatching to the language specific macros

MACRO(WRAP_MODULES_ALL_LANGUAGES)
ENDMACRO(WRAP_MODULES_ALL_LANGUAGES)

MACRO(END_WRAP_MODULES_ALL_LANGUAGES)
ENDMACRO(END_WRAP_MODULES_ALL_LANGUAGES)


MACRO(WRAP_LIBRARY_ALL_LANGUAGES library_name)
  WRAP_LIBRARY_CABLE_SWIG("${library_name}")
  WRAP_LIBRARY_SWIG_INTERFACE("${library_name}")
  IF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
    WRAP_LIBRARY_PYTHON("${library_name}")
  ENDIF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
ENDMACRO(WRAP_LIBRARY_ALL_LANGUAGES)

MACRO(END_WRAP_LIBRARY_ALL_LANGUAGES)
  END_WRAP_LIBRARY_CABLE_SWIG()
  END_WRAP_LIBRARY_SWIG_INTERFACE()
  IF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
    END_WRAP_LIBRARY_PYTHON()
  ENDIF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
ENDMACRO(END_WRAP_LIBRARY_ALL_LANGUAGES)


MACRO(INCLUDE_WRAP_CMAKE_ALL_LANGUAGES module)
  INCLUDE_WRAP_CMAKE_CABLE_SWIG("${module}")
  INCLUDE_WRAP_CMAKE_SWIG_INTERFACE("${module}")
  IF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
    INCLUDE_WRAP_CMAKE_PYTHON("${module}")
  ENDIF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
ENDMACRO(INCLUDE_WRAP_CMAKE_ALL_LANGUAGES)

MACRO(END_INCLUDE_WRAP_CMAKE_ALL_LANGUAGES module)
  END_INCLUDE_WRAP_CMAKE_CABLE_SWIG("${module}")
  END_INCLUDE_WRAP_CMAKE_SWIG_INTERFACE("${module}")
  IF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
    END_INCLUDE_WRAP_CMAKE_PYTHON("${module}")
  ENDIF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
ENDMACRO(END_INCLUDE_WRAP_CMAKE_ALL_LANGUAGES)


MACRO(WRAP_CLASS_ALL_LANGUAGES)
ENDMACRO(WRAP_CLASS_ALL_LANGUAGES)

MACRO(END_WRAP_CLASS_ALL_LANGUAGES)
ENDMACRO(END_WRAP_CLASS_ALL_LANGUAGES)


MACRO(WRAP_NON_TEMPLATE_CLASS_ALL_LANGUAGES class)
ENDMACRO(WRAP_NON_TEMPLATE_CLASS_ALL_LANGUAGES class)


MACRO(WRAP_INCLUDE_ALL_LANGUAGES inc)
  WRAP_INCLUDE_CABLE_SWIG("${inc}")
  WRAP_INCLUDE_SWIG_INTERFACE("${inc}")
ENDMACRO(WRAP_INCLUDE_ALL_LANGUAGES inc)

MACRO(WRAP_TEMPLATE_ALL_LANGUAGES name types)
ENDMACRO(WRAP_TEMPLATE_ALL_LANGUAGES)


MACRO(ADD_ONE_TYPEDEF_ALL_LANGUAGES wrap_method wrap_class swig_name template_params)
  ADD_ONE_TYPEDEF_CABLE_SWIG("${wrap_method}" "${wrap_class}" "${swig_name}" "${template_params}")
  ADD_ONE_TYPEDEF_SWIG_INTERFACE("${wrap_method}" "${wrap_class}" "${swig_name}" "${template_params}")
  IF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
    ADD_ONE_TYPEDEF_PYTHON("${wrap_method}" "${wrap_class}" "${swig_name}" "${template_params}")
  ENDIF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
ENDMACRO(ADD_ONE_TYPEDEF_ALL_LANGUAGES)


MACRO(ADD_SIMPLE_TYPEDEF_ALL_LANGUAGES wrap_class swig_name)
  ADD_SIMPLE_TYPEDEF_CABLE_SWIG("${wrap_class}" "${swig_name}")
  IF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
    ADD_SIMPLE_TYPEDEF_PYTHON("${wrap_class}" "${swig_name}")
  ENDIF(WRAP_ITK_PYTHON AND WRAPPER_LIBRARY_PYTHON)
ENDMACRO(ADD_SIMPLE_TYPEDEF_ALL_LANGUAGES wrap_class swig_name)




###############################################################################
# build the languages list

SET(WRAP_ITK_LANGUAGES CACHE INTERNAL "Internal languages list.")
FILE(GLOB local_files *)
FOREACH(f ${local_files})
  FILE(RELATIVE_PATH lang "${CMAKE_CURRENT_SOURCE_DIR}" "${f}")
  IF(IS_DIRECTORY "${f}" AND NOT "${lang}" MATCHES "CVS")
    STRING(TOUPPER "${lang}" lang_upper)
    
    # add the language to the options
    OPTION(WRAP_ITK_${lang_upper} "Build swig ${lang} wrapper support." OFF)
    
    # add the language to the list, if the user have turn it on, and include
    # the subdirectory
    IF(WRAP_ITK_${lang_upper})
      SET(WRAP_ITK_LANGUAGES ${WRAP_ITK_LANGUAGES} "${lang}")
      ADD_SUBDIRECTORY("${lang}")
      GET_DIRECTORY_PROPERTY(inc DIRECTORY "${lang}" INCLUDE_DIRECTORIES)
      INCLUDE_DIRECTORIES(${inc})
    ENDIF(WRAP_ITK_${lang_upper})
  ENDIF(IS_DIRECTORY "${f}" AND NOT "${lang}" MATCHES "CVS")
ENDFOREACH(f)
SET(WRAP_ITK_LANGUAGES ${WRAP_ITK_LANGUAGES} CACHE INTERNAL "Internal languages list.")

# MESSAGE("WRAP_ITK_LANGUAGES: ${WRAP_ITK_LANGUAGES}")
